--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,4 +24,5 @@ jobs:
     - name: Test
       run: go test -v ./...
 
-    - uses: codecov/codecov-action@v2
+    - name: Codecov
+      uses: codecov/codecov-action@v3.1.0
