--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,6 +24,8 @@ jobs:
     - name: Test
       run: go test -v ./...
 
-    - name: Codecov
+    - name: Coverage
       run: go test -race -covermode=atomic -coverprofile=coverage.out
+
+    - name: Codecov
       uses: codecov/codecov-action@v3.1.0
